# 42Madrid

42/Get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c
42/Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
42/Printf/: Makefile  README.md  ft_printf.h  printf.c  printf_aux.c
42/Push_swap/: Makefile  README.md  ft_aux.c  ft_comp.c  ft_comp2.c  ft_comp3.c  ft_ord1a.c  ft_ord1b.c  ft_ord2.c  ft_push.c  ft_reverse_rotate.c  ft_rotate.c  ft_split_aux.c  ft_swap.c  main.c  push_swap.h
42/Python_Modulo06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
42/Python_Modulo07/: battle.py  capacitor.py  tournament.py
42/a-maze-ing/: Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-0.1.0-py3-none-any.whl  pyproject.toml
42/a-maze-ing/core/: config_parser.py  output_writer.py
42/a-maze-ing/display/: __init__.py  curses_display.py
42/a-maze-ing/maze_generator/: __init__.py  generator.py
(+61 files in other folders)
